[package]
name = "dnd-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
tokio = { version = "*", features = [ "full" ] }
lazy_static = "*"
regex = "*"
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
